--- a/rproxy/Makefile
+++ b/rproxy/Makefile
@@ -10,10 +10,10 @@ include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=rproxy
 PKG_VERSION:=0.0.1
-PKG_RELEASE:=e036f26633adc80b864f874a5df52bd3001f0b2c
+PKG_RELEASE:=43b588d0399ccd85104bcee99d8d9a730043b1b1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.xz
-PKG_SOURCE_URL:=https://github.com/ptpt52/rproxy.git
+PKG_SOURCE_URL:=https://github.com/rocketime/rproxy.git
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_VERSION:=$(PKG_RELEASE)
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
